@@ -1,3 +1,9 @@
+Fri, 21 Sep 2007 00:07:49 +0200 <thp@perli.net>
+Don't translate feed format string examples
+
+	* src/gpodder/gui.py: Don't mark format string examples as
+	translatable
+
 Wed, 19 Sep 2007 17:21:09 +0200 <thp@perli.net>
 Small bugfix for updating treeChannels when its model changes
 
